fixed the clipping

--- a/client/src/styles/css/MatchCard.css
+++ b/client/src/styles/css/MatchCard.css
@@ -28,7 +28,6 @@
       text-align: center; }
     .MatchCard .display-name label {
       text-align: center;
-      width: 40px;
       padding: 5px;
       border-radius: 5px;
       background: #deb841;
