--- a/client/src/styles/css/master.css
+++ b/client/src/styles/css/master.css
@@ -650,7 +650,6 @@ h3 {
       text-align: center; }
     .MatchCard .display-name label {
       text-align: center;
-      width: 40px;
       padding: 5px;
       border-radius: 5px;
       background: #deb841;
